--- a/src/Components/TeamCardBody/style.css
+++ b/src/Components/TeamCardBody/style.css
@@ -1,3 +1,10 @@
-.card_body{
-    margin-top: 40px;
+.card_body {
+  margin-top: 40px;
+}
+
+.text{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
